많은 걸 고침

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -604,6 +604,8 @@
 	function lstBack(){
 		$("#searchKeyword").val('');
 		dealSearch();
+		//2022-09-28 검색 돌아기기 버튼 보이지 않게 설정 : 박상현
+		$("#lstBackBtn").hide();
 	}
 	
 	function myWorkListPage(){
