--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkMod.html
@@ -254,7 +254,7 @@
 											<input type="radio" id="mc-4" name="COLLworkClrCd" value="YELLOW" th:checked="${work.workClrCd eq 'YELLOW'}"><label for="mc-4" class="mc-4"></label>
 											<input type="radio" id="mc-5" name="COLLworkClrCd" value="GREEN" th:checked="${work.workClrCd eq 'GREEN'}"><label for="mc-5" class="mc-5"></label>
 											<input type="radio" id="mc-6" name="COLLworkClrCd" value="SKY" th:checked="${work.workClrCd eq 'SKY'}"><label for="mc-6" class="mc-6"></label>
-											<input type="radio" id="mc-7" name="COLLworkClrCd" value="BULE" th:checked="${work.workClrCd eq 'BULE'}"><label for="mc-7" class="mc-7"></label>
+											<input type="radio" id="mc-7" name="COLLworkClrCd" value="BLUE" th:checked="${work.workClrCd eq 'BLUE'}"><label for="mc-7" class="mc-7"></label>
 											<input type="radio" id="mc-8" name="COLLworkClrCd" value="PURPLE" th:checked="${work.workClrCd eq 'PURPLE'}"><label for="mc-8" class="mc-8"></label>
 											<input type="radio" id="mc-9" name="COLLworkClrCd" value="BROWN" th:checked="${work.workClrCd eq 'BROWN'}"><label for="mc-9" class="mc-9"></label>
 											<input type="radio" id="mc-10" name="COLLworkClrCd" value="WHITE" th:checked="${work.workClrCd eq 'WHITE'}"><label for="mc-10" class="mc-10"></label>
@@ -597,7 +597,7 @@
 												<input type="radio" id="mc-16" name="WORKworkClrCd" value="YELLOW" th:checked="${work.workClrCd eq 'YELLOW'}"><label for="mc-16" class="mc-4"></label>
 												<input type="radio" id="mc-17" name="WORKworkClrCd" value="GREEN" th:checked="${work.workClrCd eq 'GREEN'}"><label for="mc-17" class="mc-5"></label>
 												<input type="radio" id="mc-18" name="WORKworkClrCd" value="SKY" th:checked="${work.workClrCd eq 'SKY'}"><label for="mc-18" class="mc-6"></label>
-												<input type="radio" id="mc-19" name="WORKworkClrCd" value="BULE" th:checked="${work.workClrCd eq 'BULE'}"><label for="mc-19" class="mc-7"></label>
+												<input type="radio" id="mc-19" name="WORKworkClrCd" value="BLUE" th:checked="${work.workClrCd eq 'BLUE'}"><label for="mc-19" class="mc-7"></label>
 												<input type="radio" id="mc-20" name="WORKworkClrCd" value="PURPLE" th:checked="${work.workClrCd eq 'PURPLE'}"><label for="mc-20" class="mc-8"></label>
 												<input type="radio" id="mc-21" name="WORKworkClrCd" value="BROWN" th:checked="${work.workClrCd eq 'BROWN'}"><label for="mc-21" class="mc-9"></label>
 												<input type="radio" id="mc-22" name="WORKworkClrCd" value="WHITE" th:checked="${work.workClrCd eq 'WHITE'}"><label for="mc-22" class="mc-10"></label>
@@ -813,7 +813,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
+						<img src="resources/img/newdalogo.png" class="sea-img" width="237"/>
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
@@ -848,7 +848,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
+						<img src="resources/img/newdalogo.png" class="sea-img" width="237"/>
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
