--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -199,7 +199,7 @@ var getParamArtstSq= param.get('artstSq');
 
 
 if(getParamMore == getParamArtstSq && getParamMore != null && getParamMore != ''){
-	openArtstInfoModal()
+	openArtstInfoModal();
 }
       
       $(document).ready(function () {
