--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -136,7 +136,6 @@
 								<label for="w1" class="wd-145"><span></span>즉시 시작</label>
 								<input type="radio" id="w2" name="dealPeriod" value="choice">
 								<label for="w2"><span></span>시작 시간 선택</label>
-								
 								<ul class="med-ul" id="startDate">
 									<li onclick="startDateSel(this)" value="3"><a href="javascript:void(0);" >3일</a></li>
 									<li onclick="startDateSel(this)" value="7"><a href="javascript:void(0);">1주</a></li>
@@ -146,12 +145,15 @@
 								</ul>
 								<div class="input-box" id="choiceDate" style="display:none;">
 									<label style="margin: 0; padding: 0 10px 0 0px; display: inline-block; font-size: 14px; color: #333; vertical-align: middle;">기간선택</label>
-									<div class="input-cand"><input type="text" class="datepicker" id="dealStrtDt" placeholder="거래 시작 날짜"/></div>
+									<div class="input-cand"><input type="text" class="datepicker" id="dealStrtDt" placeholder="거래 시작 날짜" onchange="setDealEndngDt(this)"/></div>
 									<input type="text" class="timepicker" id="dealStrtTime" required>
 									<span class="is-span">~</span> 
 									<div class="input-cand"><input type="text" class="datepicker" id="dealEndngDt" placeholder="거래 종료 날짜"></div>
 									<input type="text" class="timepicker" id="dealEndngTime" required>
 								</div>
+								<p class="table-p">
+									※ 판매 기간은 최대 3주까지 설정할 수 있습니다.
+								</p>
 							</div>
 						</div>
 						
@@ -1215,10 +1217,21 @@ $("#workGrtUrl").change(function(){
 });
 
 jQuery(document).ready(function() {
-	$('.datepicker').datepicker({ 
+	$('#dealStrtDt').datepicker({ 
 		minDate: 0
 	}).datepicker("setDate", new Date());
+	
+	var dealStrtDt = new Date($('#dealStrtDt').val().replaceAll(".", "-"));
+	var maxDealEndngDt = new Date(dealStrtDt);
+	maxDealEndngDt.setDate(dealStrtDt.getDate() + 21);
+	
+	$('#dealEndngDt').datepicker({ 
+		minDate: 0,
+		maxDate: maxDealEndngDt
+	}).datepicker("setDate", maxDealEndngDt);
+	
 	$("#dealStrtDt").calendar($("#dealEndngDt"));
+	
 	if((result.mbrInfo.mbrDelivryAddr == null || result.mbrInfo.mbrDelivryAddr == "")
 			|| (result.mbrInfo.mbrAccountNo == null || result.mbrInfo.mbrAccountNo == "")){
 		$(".home-1").css("display", "none");
@@ -1247,6 +1260,13 @@ jQuery(document).ready(function() {
     //autoLake();
 	
 });
+
+function setDealEndngDt(obj){
+	var dealStrtDt = new Date(obj.value.replaceAll(".", "-"));
+	var maxDealEndngDt = new Date(dealStrtDt);
+	maxDealEndngDt.setDate(dealStrtDt.getDate() + 21);
+	$('#dealEndngDt').datepicker("option", "maxDate", maxDealEndngDt);	
+}
 
 $("input:radio[name='dealTypCd']").change(function(){
 	if($("input:radio[name='dealTypCd']:checked").val() == "S"){
