--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
@@ -251,7 +251,7 @@
 												<input type="radio" id="mc-4" name="COLLworkClrCd" value="YELLOW"><label for="mc-4" class="mc-4"></label>
 												<input type="radio" id="mc-5" name="COLLworkClrCd" value="GREEN"><label for="mc-5" class="mc-5"></label>
 												<input type="radio" id="mc-6" name="COLLworkClrCd" value="SKY"><label for="mc-6" class="mc-6"></label>
-												<input type="radio" id="mc-7" name="COLLworkClrCd" value="BULE"><label for="mc-7" class="mc-7"></label>
+												<input type="radio" id="mc-7" name="COLLworkClrCd" value="BLUE"><label for="mc-7" class="mc-7"></label>
 												<input type="radio" id="mc-8" name="COLLworkClrCd" value="PURPLE"><label for="mc-8" class="mc-8"></label>
 												<input type="radio" id="mc-9" name="COLLworkClrCd" value="BROWN"><label for="mc-9" class="mc-9"></label>
 												<input type="radio" id="mc-10" name="COLLworkClrCd" value="WHITE"><label for="mc-10" class="mc-10"></label>
@@ -591,7 +591,7 @@
 												<input type="radio" id="mc-16" name="WORKworkClrCd" value="YELLOW"><label for="mc-16" class="mc-4"></label>
 												<input type="radio" id="mc-17" name="WORKworkClrCd" value="GREEN"><label for="mc-17" class="mc-5"></label>
 												<input type="radio" id="mc-18" name="WORKworkClrCd" value="SKY"><label for="mc-18" class="mc-6"></label>
-												<input type="radio" id="mc-19" name="WORKworkClrCd" value="BULE"><label for="mc-19" class="mc-7"></label>
+												<input type="radio" id="mc-19" name="WORKworkClrCd" value="BLUE"><label for="mc-19" class="mc-7"></label>
 												<input type="radio" id="mc-20" name="WORKworkClrCd" value="PURPLE"><label for="mc-20" class="mc-8"></label>
 												<input type="radio" id="mc-21" name="WORKworkClrCd" value="BROWN"><label for="mc-21" class="mc-9"></label>
 												<input type="radio" id="mc-22" name="WORKworkClrCd" value="WHITE"><label for="mc-22" class="mc-10"></label>
@@ -802,7 +802,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
+						<img src="resources/img/newdalogo.png" class="sea-img" width="237"/>
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
@@ -837,7 +837,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
+						<img src="resources/img/newdalogo.png" class="sea-img" width="237"/>
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
