--- a/src/main/resources/templates/thymeleaf/header_ori.html
+++ b/src/main/resources/templates/thymeleaf/header_ori.html
@@ -133,12 +133,15 @@
 							<li><a href="/withdrawal"><img src="resources/img/ic-1.jpg" /><span>회원 탈퇴</span></a></li>
 						</ul> -->
 						<ul>
-							<li><a href="javascript:void(0);" class="myWorkList"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
+							<li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
+							<!-- <li><a href="javascript:void(0);" class="myWorkList"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li> -->
 							<li style="display:none"><a href="/memberEdit"><img src="resources/img/ic-6.jpg" /><span>회원정보 수정</span></a></li>
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>거래 내역</span></a></li>
 							<!-- class="myCollection" -->
-							<li><a href="javascript:void(0);" class="myWorkList"><img src="resources/img/ic-3.jpg" /><span>나의 작품</span></a></li>
-							<li><a href="/myWorkListReg"><img src="resources/img/ic-3.jpg" /><span>작품 등록</span></a></li>
+							<li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>My Collection</span></a></li>
+							<!-- <li><a href="javascript:void(0);" class="myWorkList"><img src="resources/img/ic-3.jpg" /><span>나의 작품</span></a></li> -->
+							<li><a href="/collection_reg"><img src="resources/img/ic-3.jpg" /><span>소장품 등록</span></a></li>
+							<!-- <li><a href="/myWorkListReg"><img src="resources/img/ic-3.jpg" /><span>작품 등록</span></a></li> -->
 							<!-- <li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>나의 소장품</span></a></li> -->
 							<!-- class="scrap" -->
 							<li><a href="javascript:void(0);" class="scrap"><img src="resources/img/ic-4.jpg" /><span>스크랩</span></a></li>
@@ -178,8 +181,10 @@
 							<li style="display:none"><a href="/memberEdit"><img src="resources/img/ic-6.jpg" /><span>회원정보 수정</span></a></li>
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>거래 내역</span></a></li>
 							<!-- class="myCollection" -->
-							<li><a href="javascript:void(0);" class="myWorkList"><img src="resources/img/ic-3.jpg" /><span>나의 작품</span></a></li>
-							<li><a href="/myWorkListReg"><img src="resources/img/ic-3.jpg" /><span>작품 등록</span></a></li>
+							<li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>My Collection</span></a></li>
+							<!-- <li><a href="javascript:void(0);" class="myWorkList"><img src="resources/img/ic-3.jpg" /><span>나의 작품</span></a></li> -->
+							<li><a href="/collection_reg"><img src="resources/img/ic-3.jpg" /><span>소장품 등록</span></a></li>
+							<!-- <li><a href="/myWorkListReg"><img src="resources/img/ic-3.jpg" /><span>작품 등록</span></a></li> -->
 							<!-- <li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/ic-3.jpg" /><span>나의 소장품</span></a></li> -->
 							<!-- class="scrap" -->
 							<li><a href="javascript:void(0);" class="scrap"><img src="resources/img/ic-4.jpg" /><span>스크랩</span></a></li>
@@ -200,7 +205,7 @@
 									<li><a href="#" id="artstReg" data-toggle="modal" data-target="#authorModal1"><span>작가등록</span></a></li>
 									<li><a href="#" onclick="workReg()"><span>작품등록</span></a></li>
 									<!-- <li><a href="#" onclick="collectionReg()"><span>판매하기</span></a></li> -->
-									<li><a href="javascript:void(0);" class="myWorkList" ><span>판매하기</span></a></li>
+									<li><a href="javascript:void(0);" class="myCollection" ><span>판매하기</span></a></li>
 									
 								</ul>
 							</div>
@@ -230,8 +235,10 @@
 				<a href="javascript:void(0);" onclick="openGuide()" class="mab-a"><span>Guide</span></a>
 				<ul class="mab-ul">
 					<li><a href="#" id="artstReg" data-toggle="modal" data-target="#authorModal1"><img src="resources/img/icon-4.png" /> <span>작가등록</span></a></li>
-					<li><a href="javascript:void(0);" onclick="workReg()"><img src="resources/img/icon-5.png" /> <span>작품등록</span></a></li>
-					<li><a href="javascript:void(0);" class="myWorkList"><img src="resources//img/icon-6.png" /> <span>판매하기</span></a></li>
+					<!-- <li><a href="javascript:void(0);" onclick="workReg()"><img src="resources/img/icon-5.png" /> <span>작품등록</span></a></li>
+					<li><a href="javascript:void(0);" class="myWorkList"><img src="resources//img/icon-6.png" /> <span>판매하기</span></a></li> -->
+					<li><a href="javascript:void(0);" class="workReg" onclick="workReg()"><img src="resources/img/icon-6.png" /> <span>작품등록</span></a></li>
+					<li><a href="javascript:void(0);" class="myCollection"><img src="resources/img/icon-6.png" /> <span>판매하기</span></a></li>
 					<!-- onclick="collectionReg()" -->
 					<!-- <li><a href="/myCollection"><img src="resources//img/icon-6.png" /> <span>판매하기</span></a></li> -->
 					
@@ -265,7 +272,7 @@
 									<option>작가명</option>
 								</select>
 							</div> -->
-							<input type="text" id="ibx_search" onkeydown="javascript: if (event.keyCode == 13) {btn_search_onclick();}" onkeyup="ibx_search_onkeyup(this);" style="outline: none;" placeholder="작품이나 작가명으로 검색해보세요." autocomplete="off"/>
+							<input type="text" id="ibx_search" onkeyup="ibx_search_onkeyup(event);" style="outline: none;" placeholder="작품이나 작가명으로 검색해보세요." autocomplete="off"/>
 							<a href="javascript:void(0);" onclick="btn_search_onclick();"><img src="resources/img/icon-2.jpg" /></a>
 						</div>
 						<div id="autocomplete">
@@ -1896,7 +1903,8 @@ $(document).on("click", ".scrap", function(){
 
 function workReg(){
 	if(sMbrSqVal != null && sMbrSqVal != ""){
-		location.href="/myWorkListReg"
+		//location.href="/myWorkListReg";
+		location.href="/collection_reg";
 	}else{
 		modalAlertShow("로그인 후 이용할 수 있습니다.", "login");
 	}
