판매자 수수료 이벤트 배너 제거 / 작가의 다른 작품 리스트 수정

--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -382,7 +382,23 @@ top:0;
     background-color: rgb(255, 255, 255);
     left: -1500px;
     z-index: 2;
-}.sbn {
+}
+/*10.04 정영우 추가*/
+.swi-box1 {
+    position: relative;
+}
+.swi-box1::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color:#f9f9f9;
+    left: -1500px;
+    z-index: 2;
+}
+/*10.04 추가 끝*/
+.sbn {
     right: -56px !important;
     width: 56px !important;
     height: 56px !important;
