딜 페이지 검색 결과 없을 시에 reload / 목록으로 돌아가기 버튼 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -303,8 +303,7 @@
 									<img src="resources/img/de/mo/icon-2.jpg" />
 									<span>응찰히스토리</span>
 								</button>
-								<button type="button" class="ba-btn3"
-									onclick="javascript:history.back();">
+								<button type="button" class="ba-btn3" onclick="javascript:history.back();">
 									<span>목록으로 돌아가기</span>
 								</button>
 								<div class="clearboth"></div>
